--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h3 {
 
 h1 {
   font-size: 96px;
+  color: #6c63ff;
 }
 
 h2 {
@@ -93,6 +94,6 @@ p {
 
 @media (max-width: 567px) {
   h3 {
-    color: rgb(210, 23, 23);
+    color: rgb(202, 4, 4);
   }
 }
